--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,6 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><%= product.title %> - $<%= product.price %></li>
+    <li><%= link_to product.title, product_path(product) %> - $<%= product.price %></li>
   <% end %>
 </ul>
