views updated to display categories

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,9 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><%= link_to product.title, product_path(product) %> - $<%= product.price %></li>
+    <li>
+      <%= link_to product.title, product_path(product) %> -
+      $<%= product.price %> (Category: <%= product.category.name %>)
+    </li>
   <% end %>
 </ul>
