--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,14 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1>All Products</h1>
 
-<ul>
-  <% @products.each do |product| %>
-    <li>
-      <%= link_to product.title, product_path(product) %> -
-      $<%= product.price %> (Category: <%= product.category.name %>)
-    </li>
-  <% end %>
-</ul>
+<% if @products.any? %>
+  <ul>
+    <% @products.each do |product| %>
+      <li>
+        <%= link_to product.title, product_path(product) %> -
+        $<%= product.price %> (Category: <%= product.category.name %>)
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No products available</p>
+<% end %>
