index route error fixed

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,14 @@
+
 <h1>All Products</h1>
 
-<% if @products.any? %>
-  <ul>
-    <% @products.each do |product| %>
-      <li>
-        <%= link_to product.title, product_path(product) %> -
-        $<%= product.price %> (Category: <%= product.category.name %>)
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>No products available</p>
-<% end %>
+<ul>
+  <% @products.each do |product| %>
+    <li>
+      <strong><%= link_to product.title, product_path(product) %></strong><br>
+      Description: <%= product.description %><br>
+      Price: $<%= product.price %><br>
+      Stock: <%= product.stock_quantity %><br>
+      Category: <%= product.category.name if product.category %><br><br>
+    </li>
+  <% end %>
+</ul>
