--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @product.title %></h1>
-<p><%= @product.description %></p>
-<p>Price: $<%= @product.price %></p>
-<p>Stock: <%= @product.stock_quantity %></p>
-<p>Category: <%= @product.category.name %></p>
+
+<p><strong>Description:</strong> <%= @product.description %></p>
+<p><strong>Price:</strong> $<%= @product.price %></p>
+<p><strong>Stock Quantity:</strong> <%= @product.stock_quantity %></p>
+<p><strong>Category:</strong> <%= @product.category.name %></p>
+
+<%= link_to 'Back to Products', products_path %>
